fix text overflow problem

--- a/project1/scss/home/home.scss
+++ b/project1/scss/home/home.scss
@@ -7,12 +7,12 @@ html {
     }
   
     .background {
-      height: 100%;
+      min-height: 100vh;
       background-image: linear-gradient(skyblue, white);
     }
   
     .container {
-      height: 100%;
+      min-height: 100vh;
       width: 100%;
       display: flex;
       flex-wrap: wrap;
@@ -59,6 +59,6 @@ html {
         text-align: center;
         color:lightblue;
         font-size: small;
-        bottom: 0%;
+        bottom:0px;
     }
   }
