--- a/project1/scss/main.css
+++ b/project1/scss/main.css
@@ -7,13 +7,13 @@ html .card-header {
 }
 
 html .background {
-  height: 100%;
+  min-height: 100vh;
   background-image: -webkit-gradient(linear, left top, left bottom, from(skyblue), to(white));
   background-image: linear-gradient(skyblue, white);
 }
 
 html .container {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -78,7 +78,7 @@ html .copyrights {
   text-align: center;
   color: lightblue;
   font-size: small;
-  bottom: 0%;
+  bottom: 0px;
 }
 
 /*!
